--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@reduxjs/toolkit": "^2.2.7",
     "@types/react": "~18.2.79",
+    "axios": "^1.7.4",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-svg": "15.2.0",
+    "react-redux": "^9.1.2",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
