--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/react": "~18.2.79",
     "axios": "^1.7.4",
@@ -17,6 +18,8 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
     "react-native-svg": "15.2.0",
     "react-redux": "^9.1.2",
     "typescript": "~5.3.3"
